[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.12" }
tokio = "1.14.0"
serde = "1.0.130"
log = "0.4.14"
serde_json = "1.0.72"
env_logger = "0.9.0"
figment = { version = "0.10.6", features = [ "toml", "env" ] }
redis-async = { version = "0.12.0", features = [ "tokio10" ] }
